fixing layout issues in chapter 4

--- a/raw/noc_pdf/stylesheets/print.css
+++ b/raw/noc_pdf/stylesheets/print.css
@@ -564,18 +564,22 @@ div.example * {
 }
 
 /* Style functions */
-.function, .klass, .var, .mono, .formula{
+.function, .klass, .var, .mono, .formula, .formula2 {
     font-family: Menlo, Monaco, Consolas, "Lucida Console", monospace;
     /*a little bit smaller than body?*/
     font-size: 8pt;
 	color: #00000;
 }
-.mono, .formula{
+.mono, .formula, .formula2{
     font-weight: bold;
 }
 
 .formula{
-    margin-left: 2em;
+    margin-left: 16pt;
+}
+
+.formula2{
+    margin-left: 83pt;
 }
 /* Style note to self */
 .notetoself {
